fix overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+p{
+  word-break: break-all;
+}
